# snap-mercado

./: .gitignore  Cargo.toml  log4rs.yaml
src/: main.rs
src/api/: db.rs  errors.rs  mod.rs  routes.rs  signup.rs
src/chain/: chain_interactor.rs  mod.rs
src/crypto/: password.rs
